--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   },
   "scripts": {
-    "start": "set NODE_ENV=dev&& npx nodemon",
+    "start": "set NODE_ENV=dev&&  ts-node-dev --rs --exit-child src/app",
     "build": "rimraf ./dist && npx tsc",
     "prod": "set NODE_ENV=prod&& npm run build && node dist/app",
     "lint": "npx eslint ./src",
@@ -29,7 +29,6 @@
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
     "husky": "^8.0.3",
-    "nodemon": "^3.0.1",
     "rimraf": "^4.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -47,6 +46,7 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
+    "ts-node-dev": "^2.0.0",
     "xss-clean": "^0.1.1"
   }
 }
